feat: Add new route, page to display single post.

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -1,3 +1,8 @@
 $purple: #424875;
 $gray: #e6e6e6;
-$darkGray: #949494;
+$midGray: #888888;
+$darkGray: #989898;
+
+$mobile: 480px;
+$tablet: 768px;
+$desktop: 1100px;
