--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -54,20 +54,69 @@ body {
 
 /* Posts */
 .list-posts {
-  background: white;
-  padding: 20px;
+  margin: 20px 0;
   .posts-list {
     list-style: none;
-    margin-left: 0;
+    padding-left: 0;
+    background: white;
     .post {
-      display: block;
-      margin-top: 30px;
-      font-weight: 600;
-      color: $darkGray;
-      text-decoration: none;
-      &:not(:first-child) {
-        // border-top: 1px solid $gray;
+      border-bottom: 1px solid $gray;
+      .post-link {
+        display: block;
+        padding: 20px;
+        font-weight: 600;
+        color: $midGray;
+        text-decoration: none;
+        transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+        &:hover {
+          color: $purple;
+          // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+          transform: translateX(20px);
+        }
+        .post-icon {
+          display: none;
+          float: right;
+          @media screen and (min-width: $mobile) {
+            display: inline-block;
+            padding-left: 5px;
+          }
+        }
       }
-    } 
+    }
+  }
+}
+
+/* Single post View */
+.view-post {
+  .single-post {
+    margin-top: 30px;
+    padding: 20px;
+    color: $darkGray;
+    background: white;
+    .title {
+      font-size: 30px;
+      line-height: 34px;
+      font-weight: 600;
+    }
+    .body {
+      font-size: 20px;
+      line-height: 24px;
+    }
+    .author {
+      color: $gray;
+      font-size: 14px;
+      line-height: 18px;
+    }
+    .date {
+      font-size: 20px;
+      line-height: 24px;
+    }
+    .score {
+      font-size: 20px;
+      line-height: 24px;
+    }
+    div {
+      margin-top: 40px;
+    }
   }
 }
