refactor: Category view filters posts. Style main page.

--- a/src/assets/scss/_normalize.scss
+++ b/src/assets/scss/_normalize.scss
@@ -576,3 +576,13 @@
  th {
    padding: 0;
  }
+
+  /**
+  * Clearfix
+  */
+
+  .clearfix::after {
+    content: " ";
+    display: table;
+    clear: both;
+  }
