--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -73,9 +73,24 @@ body {
           // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
           transform: translateX(20px);
         }
+        .post-date {
+          display: block;
+          color: $midGray;
+          margin-top: 20px;
+          font-size: 14px;
+          line-height: 18px;
+        }
+        .post-score {
+          display: block;
+          color: $green;
+          margin-top: 20px;
+        }
         .post-icon {
           display: none;
           float: right;
+          font-size: 40px;
+          line-height: 44px;
+          margin-top: -75px;
           @media screen and (min-width: $mobile) {
             display: inline-block;
             padding-left: 5px;
@@ -119,4 +134,16 @@ body {
       margin-top: 40px;
     }
   }
+}
+
+.no-post {
+  background-color: white;
+  padding: 20px;
+  margin-top: 30px;
+}
+
+.section-title {
+  margin-top: 30px;
+  font-size: 30px;
+  line-height: 34px;
 }
