--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -129,6 +129,8 @@ body {
     .score {
       font-size: 20px;
       line-height: 24px;
+      color: $green;
+      font-weight: 600;
     }
     div {
       margin-top: 40px;
@@ -143,7 +145,61 @@ body {
 }
 
 .section-title {
-  margin-top: 30px;
+  margin: 30px 0;
   font-size: 30px;
   line-height: 34px;
+}
+
+.categories-list {
+  font-size: 20px;
+  line-height: 24px;
+  width: 200px;
+  height: 40px;
+}
+
+.home-button {
+  background-color: $midGray;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  transition-duration: 0.3s;
+  &:hover {
+    background-color: $purple;
+  }
+}
+
+/* Add new post button */
+.add-new-container {
+  position: absolute;
+  bottom: 70px;
+  right: 70px;
+  .add-new-button {
+    display: block;
+    background-color: $purple;
+    border-radius: 999em;
+    width: 56px;
+    height: 56px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+    line-height: 1;
+    font-size: 36px;
+    position: relative;
+    cursor: pointer;
+  
+    span {
+      position: absolute;
+      left: 0;
+      top: 50%;
+      height: 100%;
+      width: 100%;
+      text-align: center;
+      margin-top: -22px;
+      color: #FFF;
+    }
+  }
 }
