--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -31,11 +31,19 @@ body {
 /* Header */
 .header {
   background-color: $purple;
-  color: white;
-  padding: 20px;
   text-align: center;
-  font-size: 30px;
-  line-height: 40px;
+  a {
+    display: block;
+    color: white;
+    padding: 20px;
+    font-size: 30px;
+    line-height: 40px;
+    text-decoration: none;
+    transition-duration: 0.2s;
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
 }
 
 /* Sticky body content*/
@@ -175,10 +183,11 @@ body {
 }
 
 /* Add new post button */
+
 .add-new-container {
   position: absolute;
-  bottom: 70px;
-  right: 70px;
+  bottom: 25px;
+  right: 25px;
   .add-new-button {
     display: block;
     background-color: $purple;
