--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -20,6 +20,16 @@ body {
   background-color: $gray;
 }
 
+/* Quick access  classes*/
+
+.mt20 {
+  margin-top: 20px;
+}
+
+.mt30 {
+  margin-top: 30px;
+}
+
 /* Containers */
 .container {
   width: 90%;
@@ -116,33 +126,33 @@ body {
     padding: 20px;
     color: $darkGray;
     background: white;
-    .title {
-      font-size: 30px;
-      line-height: 34px;
-      font-weight: 600;
-    }
-    .body {
-      font-size: 20px;
-      line-height: 24px;
-    }
-    .author {
-      color: $gray;
-      font-size: 14px;
-      line-height: 18px;
-    }
-    .date {
-      font-size: 20px;
-      line-height: 24px;
-    }
-    .score {
-      font-size: 20px;
-      line-height: 24px;
-      color: $green;
-      font-weight: 600;
-    }
     div {
       margin-top: 40px;
     }
+  }
+  .title {
+    font-size: 30px;
+    line-height: 34px;
+    font-weight: 600;
+  }
+  .body {
+    font-size: 20px;
+    line-height: 24px;
+  }
+  .author {
+    color: $gray;
+    font-size: 14px;
+    line-height: 18px;
+  }
+  .date {
+    font-size: 20px;
+    line-height: 24px;
+  }
+  .score {
+    font-size: 20px;
+    line-height: 24px;
+    color: $green;
+    font-weight: 600;
   }
 }
 
@@ -210,5 +220,16 @@ body {
       margin-top: -22px;
       color: #FFF;
     }
+  }
+}
+
+/* Post Comments */
+
+.post-comments {
+  margin-top: 30px;
+  padding: 20px;
+  background-color: white;
+  .comment {
+    margin-top: 30px;
   }
 }
