refactor: Moved position of Add comment

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -160,7 +160,10 @@ body {
   }
 
   .add-comment {
+    background-color: white;
     padding-bottom: 30px;
+    padding: 20px;
+    margin-top: 30px;
   }
 }
 
