refactor: Post comment count styles

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -107,6 +107,11 @@ body {
           color: $green;
           margin-top: 20px;
         }
+        .post-comment-count {
+          display: block;
+          color: $midGray;
+          margin-top: 20px;
+        }
         .post-icon {
           display: none;
           float: right;
