feat: Delete Post and comment

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -250,6 +250,17 @@ body {
   }
 }
 
+/* Actions */
+
+.edit {
+
+}
+
+.delete {
+  margin-left: 20px;
+  color: red;
+}
+
 /* Create Page */
 
 .create-page {
