--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -211,9 +211,10 @@ body {
 /* Add new post button */
 
 .add-new-container {
-  position: absolute;
+  position: fixed;
   bottom: 25px;
   right: 25px;
+  z-index: 5;
   .add-new-button {
     display: block;
     background-color: $purple;
@@ -261,9 +262,9 @@ body {
   color: red;
 }
 
-/* Create Page */
+/* Create Edit Page */
 
-.create-page {
+.create-edit-page {
   background-color: white;
   margin-top: 30px;
   padding: 20px;
