--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -80,20 +80,21 @@ body {
   .posts-list {
     list-style: none;
     padding-left: 0;
-    background: white;
+    margin-top: 30px;
     .post {
       border-bottom: 1px solid $gray;
       .post-link {
         display: block;
         padding: 20px;
         font-weight: 600;
+        background: white;
         color: $midGray;
         text-decoration: none;
         transition: all 0.3s cubic-bezier(.25,.8,.25,1);
         &:hover {
           color: $purple;
-          // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-          transform: translateX(20px);
+          box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);          // transform: scale(1.2);
+          transform: translateY(-20px);
         }
         .post-date {
           display: block;
@@ -208,38 +209,6 @@ body {
   }
 }
 
-/* Add new post button */
-
-.add-new-container {
-  position: fixed;
-  bottom: 25px;
-  right: 25px;
-  z-index: 5;
-  .add-new-button {
-    display: block;
-    background-color: $purple;
-    border-radius: 999em;
-    width: 56px;
-    height: 56px;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
-    line-height: 1.2;
-    font-size: 36px;
-    position: relative;
-    cursor: pointer;
-  
-    span {
-      position: absolute;
-      left: 0;
-      top: 50%;
-      height: 100%;
-      width: 100%;
-      text-align: center;
-      margin-top: -22px;
-      color: #FFF;
-    }
-  }
-}
-
 /* Post Comments */
 
 .post-comments {
@@ -259,7 +228,53 @@ body {
 
 .delete {
   margin-left: 20px;
-  color: red;
+  color: $red;
+}
+
+.vote {
+  position: relative;
+  z-index: 10;
+  margin-left: 30px;
+  font-size: 40px;
+  line-height: 40px;
+  &.vote-increase {
+    color: $darkGray;
+  }
+  &.vote-decrease {
+    color: $red;
+
+  }
+}
+
+.action-container {
+  position: fixed;
+  bottom: 25px;
+  right: 25px;
+  z-index: 5;
+}
+
+.action-button {
+  display: inline-block;
+  background-color: $purple;
+  border-radius: 999em;
+  width: 56px;
+  height: 56px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+  line-height: 1.2;
+  font-size: 36px;
+  position: relative;
+  cursor: pointer;
+
+  span {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    margin-top: -22px;
+    color: #FFF;
+  }
 }
 
 /* Create Edit Page */
