--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -34,6 +34,14 @@ body {
   margin-left: 20px;
 }
 
+.pt20 {
+  padding-top: 20px;
+}
+
+.pt30 {
+  padding-top: 30px;
+}
+
 /* Containers */
 .container {
   width: 90%;
@@ -79,48 +87,56 @@ body {
     margin-top: 30px;
     .post {
       border-bottom: 1px solid $gray;
+      display: block;
+      padding: 20px;
+      font-weight: 600;
+      background: white;
+      color: $midGray;
+      transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+      
       .post-link {
-        display: block;
-        padding: 20px;
-        font-weight: 600;
-        background: white;
-        color: $midGray;
         text-decoration: none;
-        transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-        &:hover {
-          color: $purple;
-          box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);          // transform: scale(1.2);
-          transform: translateY(-20px);
-        }
-        .post-date {
-          display: block;
-          color: $midGray;
-          margin-top: 20px;
-          font-size: 14px;
-          line-height: 18px;
-        }
-        .post-score {
-          display: block;
-          color: $green;
-          margin-top: 20px;
-        }
-        .post-comment-count {
-          display: block;
-          color: $midGray;
-          margin-top: 20px;
-        }
-        .post-icon {
-          display: none;
-          float: right;
-          font-size: 40px;
-          line-height: 44px;
-          margin-top: -50px;
-          @media screen and (min-width: $mobile) {
-            display: inline-block;
-            padding-left: 5px;
-          }
+        color: $purple;
+      }
+
+      &:hover {
+        color: $purple;
+        box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);          // transform: scale(1.2);
+        transform: translateY(-20px);
+      }
+
+      .post-date {
+        display: block;
+        color: $midGray;
+        padding-top: 20px;
+        font-size: 14px;
+        line-height: 18px;
+      }
+
+      .post-score {
+        display: block;
+        color: $green;
+        padding-top: 20px;
+      }
+
+      .post-comment-count {
+        display: block;
+        color: $midGray;
+        padding-top: 20px;
+      }
+
+      .post-icon {
+        display: none;
+        float: right;
+        font-size: 40px;
+        line-height: 44px;
+        margin-top: -50px;
+        @media screen and (min-width: $mobile) {
+          display: inline-block;
+          padding-left: 5px;
         }
       }
+    
     }
   }
 }
@@ -140,6 +156,7 @@ body {
     font-size: 30px;
     line-height: 34px;
     font-weight: 600;
+    color: $purple;
   }
   .body {
     font-size: 20px;
@@ -169,7 +186,7 @@ body {
   }
 }
 
-.no-post {
+.page-not-found {
   background-color: white;
   padding: 20px;
   margin-top: 30px;
@@ -224,12 +241,21 @@ body {
 /* Actions */
 
 .edit {
-
+  color: $purple;
 }
 
 .delete {
   margin-left: 20px;
   color: $red;
+}
+
+.edit,
+.delete {
+  font-weight: 600;
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 .action-container {
@@ -255,11 +281,11 @@ body {
   span {
     position: absolute;
     left: 0;
-    top: 50%;
+    top: 0;
     height: 100%;
     width: 100%;
+    line-height: 50px;
     text-align: center;
-    margin-top: -22px;
     color: #FFF;
   }
 
@@ -269,9 +295,6 @@ body {
   
   &.vote-decrease {
     background: $darkGray;
-    span {
-      top: 43%;
-    }
   }
 
   &:hover {
